--- a/templates/pages/user.html
+++ b/templates/pages/user.html
@@ -2,36 +2,37 @@
 {% block body %}
  <div class="container"> 
 
-<button onclick="location.href='/user/addForm/'"> Insert</button>
+<button> Insert</button>
 <button> Update</button>
 
 <div className="datatable scroll">
-  <h1>List of Users</h1>
   <table class="table table-hover">
     <thead>
       <tr>
-      {% for header in headers %}
-        <th scope="col">{{header}}</th>
-      {% endfor %}
+        <th scope="col">ID</th>
+        <th scope="col">User Name</th>
+        <th scope="col">Full Name</th>
+        <th scope="col">Email</th>
       </tr>
     </thead>
-      <tbody>
-      {% for user in users %}
+    <tbody>
       <tr>
-        <td scope="row">{{user.id}}</td>
-        <td>{{user.username}}</td>
-        <td>{{user.full_name}}</td>
-        <td>{{user.email}}</td>
-        <td>{{user.phone_number}}</td>
-        <td>{{user.report_access}}</td>
-        <td>{{user.view_costs}}</td>
-        <td>{{user.last_login_date}}</td>
-        <td>{{user.enabled}}</td>
-        <td>{{user.is_corporated}}</td>
-        <td>{{user.created_on}}</td>
-        <td>{{user.modified_on}}</td>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
       </tr>
-      {% endfor %}
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td colspan="2">Larry the Bird</td>
+        <td>@twitter</td>
+      </tr>
     </tbody>
   </table>
  </div>
