--- a/templates/pages/user.html
+++ b/templates/pages/user.html
@@ -1,39 +1,50 @@
 {% extends "layout.html" %}
 {% block body %}
- <div class="container"> 
-
-<button> Insert</button>
-<button> Update</button>
-
+<div class="container"> 
 <div className="datatable scroll">
-  <table class="table table-hover">
+  <h1>List of Users</h1>
+  <table class="table table-hover" scroll>
     <thead>
       <tr>
-        <th scope="col">ID</th>
-        <th scope="col">User Name</th>
-        <th scope="col">Full Name</th>
-        <th scope="col">Email</th>
+      {% for header in headers %}
+        <th scope="col">{{header}}</th>
+      {% endfor %}
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
+      <tbody>
+      {% for user in users %}
       <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
+        <!-- <td><input type="checkbox" name="check" value="{{user.id}}"></td> -->
+        <td scope="row">{{user.id}}</td>
+        <td>{{user.username}}</td>
+        <td>{{user.full_name}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.phone_number}}</td>
+        <td>{{user.report_access}}</td>
+        <td>{{user.view_costs}}</td>
+        <td>{{user.last_login_date}}</td>
+        <td>{{user.enabled}}</td>
+        <td>{{user.is_corporated}}</td>
+        <td>{{user.created_on}}</td>
+        <td>{{user.modified_on}}</td>
+        <td><button class="btn btn-primary btn-update"  onclick="getUserUpdate('{{user.id}}')"> Update</button></td>
       </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-      </tr>
+      {% endfor %}
     </tbody>
   </table>
+  <div style="display: flex; justify-content: end;">
+    <button onclick="location.href='/user/addForm/'" class="btn btn-primary btn-add"> Insert</button>
+  </div>
+
  </div>
+{% endblock %}
+
+{% block script %}
+<script>
+  function getUserUpdate(userId){
+    window.location.href = `/user/updateForm/${userId}`; // Chuyển đến trang update
+}
+</script>
 {% endblock %}
